# online_learning_platform

./: .env  Dockerfile  README.md  docker-compose.yaml  env.sample  pyproject.toml
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
materials/: models.py  serializers.py  task.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_options_alter_course_picture_and_more.py  0003_course_owner_lesson_owner.py
users/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_user.py  load_payments.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_user.py
